ffrl-{fsm,miniconfig,n2n} Makefile: moving packages to submenu

--- a/feeds/ffrl/ffrl-fsm/Makefile
+++ b/feeds/ffrl/ffrl-fsm/Makefile
@@ -13,14 +13,15 @@ PKG_VERSION:=0.0.20120404
 PKG_RELEASE:=1
 #PKG_REV:=
 
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
-PKG_BUILD_DEPENDS := uci base-files
+#PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
+#PKG_BUILD_DEPENDS := uci base-files
 
 include $(INCLUDE_DIR)/package.mk
 
 define Package/ffrl-fsm
-  SECTION:=ffrl
+  SECTION:=net
   CATEGORY:=Network
+  SUBMENU:=Freifunk Rheinland
   TITLE:=Finite-state machine for Freifunk Rheinland
   DEPENDS:=+base-files +ffrl-miniconfig
   URL:=http://www.freifunk-rheinland.net
