--- a/feeds/ffrl/ffrl-n2n/Makefile
+++ b/feeds/ffrl/ffrl-n2n/Makefile
@@ -13,14 +13,15 @@ PKG_VERSION:=0.0.3875.20120414
 PKG_RELEASE:=1
 #PKG_REV:=
 
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
-PKG_BUILD_DEPENDS := uci base-files
+#PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
+#PKG_BUILD_DEPENDS := uci base-files
 
 include $(INCLUDE_DIR)/package.mk
 
 define Package/ffrl-n2n
-  SECTION:=ffrl
+  SECTION:=net
   CATEGORY:=Network
+  SUBMENU:=Freifunk Rheinland
   TITLE:=Freifunk Rheinland - n2n init script
   DEPENDS:=+base-files +n2n
   URL:=http://www.freifunk-rheinland.net
