--- a/settings.mk.example
+++ b/settings.mk.example
@@ -14,7 +14,7 @@ MAKEFLAGS	+= -s --no-print-directory
 # OpenWrt version
 # check the current SVN revision with
 # svn info svn://svn.openwrt.org/openwrt/trunk/ | grep "Rev:" | sed -e "s/.*: //g"
-SVNREVISION	= 32418
+SVNREVISION	= 32428
 
 # OpenWrt Backfire version
 BACKFIREVERSION	= 10.03.1
@@ -30,5 +30,5 @@ REPOSITORY = trunk
 PLATFORM = ar71xx
 
 # Supported communitis (for zeroconfig images)
-COMMUNITY = duesseldorf duisburg krefeld neuss radevormwald solingen wuppertal
+COMMUNITY = aachen duesseldorf duisburg krefeld moenchengladbach neuss radevormwald solingen wuppertal
 
