--- a/feeds.conf
+++ b/feeds.conf
@@ -1,2 +1,2 @@
 #src-git ffj git://code.sotun.de/ffj/feed
-src-git ffrl git://github.com/ffrl/feed.git
+src-git ffrl git://github.com/ffrl/ffrl-feed.git
