new cell: Wermelskirchen

--- a/com.conf
+++ b/com.conf
@@ -16,11 +16,11 @@
 # You should have received a copy of the GNU General Public License along with
 # this program.  If not, see <http://www.gnu.org/licenses/>.
 
-version="0.0.20120621"
+version="0.0.20120821"
 
 # Konfigurierbare Freifunk-Zellen
 cells(){
-cells="ffrl ac d du kr j me mg ne gmrv peg sg w"
+cells="ffrl ac d du kr j me mg ne gmrv gl peg sg w"
 }
 
 # ------------------------------------------------------------------------------
@@ -47,7 +47,7 @@ bssid=12:ca:ff:ee:ba:be
 subnet="10.90.0.0/16"
 ip6ula="fda0:747e:ab29:ffac::/64"
 ssid1="www.freifunk-rheinland.net"
-n2n=ffrln2n1
+n2n=ffrln2n
 }
 
 cell_d(){
@@ -104,10 +104,10 @@ com='ffme'
 channel=1
 batssid=FFME-BATBONE
 bssid=02:CA:FF:EE:B7:A3
-subnet="10.108.0.0/15"
+subnet="10.108.0.0/16"
 ip6ula="fda0:747e:ab29:5158::/64"
 ssid1="www.freifunk-rheinland.net"
-n2n=ffrln2n1
+n2n=ffrln2n
 }
 
 cell_mg(){
@@ -147,6 +147,19 @@ ssid1="Freifunk Radevormwald"
 n2n=ffrln2n1
 }
 
+cell_gl(){
+name="Wermelskirchen (Rheinisch-Bergischer Kreis)"
+com='ffwkn'
+channel=1
+batssid=FFRBK-BATBONE
+bssid=02:CA:FF:EE:21:96
+subnet="10.52.0.0/16"
+ip6ula="fda0:747e:ab29:2196::/64"
+ssid1="www.freifunk-rheinland.net"
+#ssid2="Freifunk Wermelskirchen"
+n2n=ffwkn2n
+}
+
 cell_peg(){
 name="Pegnitz"
 com='ffpegde'
@@ -182,7 +195,7 @@ subnet="10.3.0.0/16"
 ip6ula="fda0:747e:ab29:e1ba::/64"
 ssid1="www.freifunk-wuppertal.net"
 #ssid2="www.freifunk-rheinland.net"
-n2n=ffrln2n1
+n2n=ffrln2nW
 }
 
 # ------------------------------------------------------------------------------
@@ -196,18 +209,39 @@ n2n2='78.47.181.173'
 port2='31337'
 }
 
+# fNordeinfang (nur ein Link)
 n2n_ffrln2n1(){
-amount='1'
+amount='2'
 n2n1='fnordeingang.de'
 port1='31337'
 }
 
+# Wuppertal
+n2n_ffrln2nW(){
+amount='3'
+n2n1='fnordeingang.de'
+port1='31337'
+n2n2='78.47.181.173'
+port2='31337'
+}
+
+# Wermelskirchen
+n2n_ffwkn2n(){
+amount='2'
+n2n1='ffwkn2n.no-ip.org'
+port1='56789'
+n2n2='fnordeingang.de'
+port2='31337'
+}
+
+# Pegnitz
 n2n_ffpegde(){
 amount='1'
 n2n1='freifunk.f3l.de'
 port1='31337'
 }
 
+# Jena
 n2n_ffj(){
 amount='2'
 n2n1='fritz-der-server.de'
@@ -216,6 +250,7 @@ n2n2='89.238.83.22'
 port2='9876'
 }
 
+# Kein n2n
 n2n_none(){
 amount='0'
 }
