changes in cell Wermelskirchen & cell Wuppertal

--- a/com.conf
+++ b/com.conf
@@ -150,13 +150,13 @@ n2n=ffrln2n1
 cell_gl(){
 name="Wermelskirchen (Rheinisch-Bergischer Kreis)"
 com='ffwkn'
-channel=1
+channel=5
 batssid=FFRBK-BATBONE
 bssid=02:CA:FF:EE:21:96
 subnet="10.52.0.0/16"
 ip6ula="fda0:747e:ab29:2196::/64"
 ssid1="www.freifunk-rheinland.net"
-#ssid2="Freifunk Wermelskirchen"
+#ssid1="Freifunk Wermelskirchen"
 n2n=ffwkn2n
 }
 
@@ -218,10 +218,10 @@ port1='31337'
 
 # Wuppertal
 n2n_ffrln2nW(){
-amount='3'
-n2n1='fnordeingang.de'
-port1='31337'
-n2n2='78.47.181.173'
+amount='2'
+n2n1='n2n.freifunk-wuppertal.net'
+port1='42000'
+n2n2='fnordeingang.de'
 port2='31337'
 }
 
