cell KBU adaption for makeconfig

--- a/com.conf
+++ b/com.conf
@@ -74,6 +74,18 @@ ssid1="www.freifunk-rheinland.net"
 n2n=ffrln2n
 }
 
+cell_kbu(){
+name="Köln, Bonn und Umgebung"
+com='ffkbu'
+channel=11
+batssid=batman.kbu.freifunk.net
+bssid=B2:CA:FF:EE:BA:BE
+subnet="172.27.0.0/16"
+ip6ula="fda0:747e:ab29:beef::/64"
+ssid1="kbu.freifunk.net"
+n2n=ffrln2n
+}
+
 cell_kr(){
 name="Krefeld"
 com='ffkrefeld'
