insert “kbu” to com.conf & settings.mk.example

--- a/com.conf
+++ b/com.conf
@@ -20,7 +20,7 @@ version="0.0.20120821"
 
 # Konfigurierbare Freifunk-Zellen
 cells(){
-cells="ffrl ac d du kr j me mg ne gmrv gl peg sg w"
+cells="ffrl ac d du kbu kr j me mg ne gmrv gl peg sg w"
 }
 
 # ------------------------------------------------------------------------------
