com.conf: n2n changes in Funkzelle Aachen

--- a/com.conf
+++ b/com.conf
@@ -47,7 +47,7 @@ bssid=12:ca:ff:ee:ba:be
 subnet="10.90.0.0/16"
 ip6ula="fda0:747e:ab29:ffac::/64"
 ssid1="www.freifunk-rheinland.net"
-n2n=ffrln2n
+n2n=ffac
 }
 
 cell_d(){
@@ -227,6 +227,13 @@ amount='2'
 n2n1='fnordeingang.de'
 port1='31337'
 }
+# Aachen
+n2n_ffac(){
+amount='2'
+n2n1='fnordeingang.de'
+port1='31337'
+n2n2='137.226.143.11'
+port2='31337'
 
 # Wuppertal
 n2n_ffrln2nW(){
